# Convolution-Matrix

./: .gitignore  CMakeLists.txt  README.md
include/: kernels.h
main/: convoMatrix.cu
src/: convoMatrix.cu
